cleaning on frontend

--- a/WebBellwether.Web/WebBellwether.Web.csproj
+++ b/WebBellwether.Web/WebBellwether.Web.csproj
@@ -147,7 +147,6 @@
     <Content Include="app\authorizations\authentication.html" />
     <Content Include="app\bellwether\bellwether.html" />
     <Content Include="app\integrationGames\editGameFeatures.html" />
-    <Content Include="app\home\footer.html" />
     <Content Include="app\guide\guide.html" />
     <Content Include="app\home\header.html" />
     <Content Include="app\home\home.html" />
@@ -219,37 +218,6 @@
     <Content Include="scripts\bootstrap.js" />
     <Content Include="scripts\bootstrap.min.js" />
     <Content Include="scripts\css3-animate-it.js" />
-    <Content Include="content\less\mixins\animation.less" />
-    <Content Include="content\less\mixins\opacity.less" />
-    <Content Include="content\less\mixins\perspective.less" />
-    <Content Include="content\less\mixins\rotate.less" />
-    <Content Include="content\less\mixins\scale.less" />
-    <Content Include="content\less\mixins\skew.less" />
-    <Content Include="content\less\mixins\transform.less" />
-    <Content Include="content\less\mixins\transition.less" />
-    <Content Include="content\less\mixins\translate.less" />
-    <Content Include="content\less\mixins\visibility.less" />
-    <Content Include="content\less\animations\bounce-in.less" />
-    <Content Include="content\less\animations\bounce-out.less" />
-    <Content Include="content\less\animations\fade-in-short.less" />
-    <Content Include="content\less\animations\fade-in.less" />
-    <Content Include="content\less\animations\fade-out.less" />
-    <Content Include="content\less\animations\flip-in.less" />
-    <Content Include="content\less\animations\flip-out.less" />
-    <Content Include="content\less\animations\grow.less" />
-    <Content Include="content\less\animations\light-speed-in.less" />
-    <Content Include="content\less\animations\light-speed-out.less" />
-    <Content Include="content\less\animations\pulse.less" />
-    <Content Include="content\less\animations\roll-in.less" />
-    <Content Include="content\less\animations\roll-out.less" />
-    <Content Include="content\less\animations\rotate-in.less" />
-    <Content Include="content\less\animations\rotate-out.less" />
-    <Content Include="content\less\animations\shake.less" />
-    <Content Include="content\less\animations\swing.less" />
-    <Content Include="content\less\animations\tada.less" />
-    <Content Include="content\less\animations\wiggle.less" />
-    <Content Include="content\less\animations\wobble.less" />
-    <Content Include="content\less\animations.less" />
     <Content Include="Fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Fonts\glyphicons-halflings-regular.eot" />
@@ -262,7 +230,7 @@
     <Content Include="scripts\angular-loader.min.js.map" />
     <Content Include="scripts\angular-cookies.min.js.map" />
     <Content Include="scripts\angular-animate.min.js.map" />
-    <Content Include="content\less\magic.less" />
+    <Content Include="content\less\backgroundAnimation.less" />
     <None Include="scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="scripts\i18n\angular-locale_af-na.js" />
     <Content Include="scripts\i18n\angular-locale_af-za.js" />
