--- a/WebBellwether.API/WebBellwether.API.csproj
+++ b/WebBellwether.API/WebBellwether.API.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Controllers\RefreshTokensController.cs" />
     <Compile Include="Controllers\TranslateController.cs" />
     <Compile Include="Controllers\VersionsController.cs" />
+    <Compile Include="ExtensionMethods\ResponseExtensionMethods.cs" />
     <Compile Include="Function\Helper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\FacebookAuthProvider.cs" />
@@ -176,6 +177,7 @@
     <Compile Include="Providers\SimpleAuthorizationServerProvider.cs" />
     <Compile Include="Providers\SimpleRefreshTokenProvider.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Utility\ServiceExecutor.cs" />
     <Compile Include="Utility\ServiceFactory.cs" />
   </ItemGroup>
   <ItemGroup>
