--- a/WebBellwether.Services/WebBellwether.Services.csproj
+++ b/WebBellwether.Services/WebBellwether.Services.csproj
@@ -73,9 +73,11 @@
     <Compile Include="Services\IntegrationGameService\IntegrationGameService.cs" />
     <Compile Include="Services\IntegrationGameService\ManagementFeaturesService.cs" />
     <Compile Include="Services\IntegrationGameService\ManagementIntegrationGamesService.cs" />
+    <Compile Include="Services\JokeService\JokeCategoryTranslationService.cs" />
     <Compile Include="Services\JokeService\JokeService.cs" />
-    <Compile Include="Services\JokeService\ManagementJokeCategoryService.cs" />
-    <Compile Include="Services\JokeService\ManagementJokeService.cs" />
+    <Compile Include="Services\JokeService\JokeTranslationService.cs" />
+    <Compile Include="Services\JokeService\JokeCategoryManagementService.cs" />
+    <Compile Include="Services\JokeService\JokeManagementService.cs" />
     <Compile Include="Services\LanguageService\ManagementLanguageService.cs" />
     <Compile Include="Services\TranslateService\YandexTranslateService.cs" />
     <Compile Include="Services\VersionService\VersionService.cs" />
