--- a/WebBellwether.Web/WebBellwether.Web.csproj
+++ b/WebBellwether.Web/WebBellwether.Web.csproj
@@ -115,23 +115,23 @@
     <Content Include="app\guide\guideController.js" />
     <Content Include="app\home\homeController.js" />
     <Content Include="app\home\indexController.js" />
-    <Content Include="app\integrationGames\editGameFeaturesController.js" />
-    <Content Include="app\integrationGames\integrationGamesController.js" />
-    <Content Include="app\jokes\jokesController.js" />
+    <Content Include="app\integrationGames\gameFeatureManagementController.js" />
+    <Content Include="app\integrationGames\integrationGameController.js" />
+    <Content Include="app\jokes\jokeController.js" />
     <Content Include="app\authorizations\loginController.js" />
-    <Content Include="app\integrationGames\managementIntegrationGamesController.js" />
-    <Content Include="app\jokes\jokesService.js" />
+    <Content Include="app\integrationGames\integrationGameManagementController.js" />
+    <Content Include="app\jokes\jokeService.js" />
     <Content Include="app\jokes\jokeCategoryManagement.html" />
     <Content Include="app\jokes\jokeCategoryManagementController.js" />
     <Content Include="app\jokes\jokeManagement.html" />
     <Content Include="app\jokes\jokeManagementController.js" />
-    <Content Include="app\languages\languagesService.js" />
+    <Content Include="app\languages\languageService.js" />
     <Content Include="app\photoGalleries\photoGalleryController.js" />
     <Content Include="app\authorizations\refreshController.js" />
     <Content Include="app\authorizations\signupController.js" />
     <Content Include="app\authorizations\tokensManagerController.js" />
-    <Content Include="app\languages\managementLanguages.html" />
-    <Content Include="app\languages\managementLanguagesController.js" />
+    <Content Include="app\languages\languageManagement.html" />
+    <Content Include="app\languages\languageManagementController.js" />
     <Content Include="app\search\search.html" />
     <Content Include="app\search\searchController.js" />
     <Content Include="app\translations\translateService.js" />
@@ -140,25 +140,25 @@
     <Content Include="app\routeAnimate.js" />
     <Content Include="app\authorizations\authInterceptorService.js" />
     <Content Include="app\authorizations\authService.js" />
-    <Content Include="app\integrationGames\integrationGamesService.js" />
+    <Content Include="app\integrationGames\integrationGameService.js" />
     <Content Include="app\home\sharedService.js" />
     <Content Include="app\authorizations\tokensManagerService.js" />
     <Content Include="app\translations\translationService.js" />
     <Content Include="app\authorizations\associate.html" />
     <Content Include="app\authorizations\authentication.html" />
     <Content Include="app\bellwether\bellwether.html" />
-    <Content Include="app\integrationGames\editGameFeatures.html" />
+    <Content Include="app\integrationGames\gameFeatureManagement.html" />
     <Content Include="app\guide\guide.html" />
     <Content Include="app\home\header.html" />
     <Content Include="app\home\home.html" />
-    <Content Include="app\integrationGames\integrationGames.html" />
-    <Content Include="app\jokes\jokes.html" />
-    <Content Include="app\integrationGames\managementIntegrationGames.html" />
+    <Content Include="app\integrationGames\integrationGame.html" />
+    <Content Include="app\jokes\joke.html" />
+    <Content Include="app\integrationGames\integrationGameManagement.html" />
     <Content Include="app\photoGalleries\photoGallery.html" />
     <Content Include="app\authorizations\refresh.html" />
     <Content Include="app\authorizations\tokens.html" />
-    <Content Include="app\versions\managementVersions.html" />
-    <Content Include="app\versions\managementVersionsController.js" />
+    <Content Include="app\versions\versionManagement.html" />
+    <Content Include="app\versions\versionManagementController.js" />
     <Content Include="app\versions\versionsService.js" />
     <Content Include="authComplete.html" />
     <Content Include="content\css\animation.css" />
