--- a/WebBellwether.API/WebBellwether.API.csproj
+++ b/WebBellwether.API/WebBellwether.API.csproj
@@ -163,14 +163,16 @@
   <ItemGroup>
     <Compile Include="ChallengeResult.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\IntegrationGamesController.cs" />
+    <Compile Include="Controllers\GameFeatureManagementController.cs" />
+    <Compile Include="Controllers\IntegrationGameController.cs" />
+    <Compile Include="Controllers\IntegrationGameManagementController.cs" />
     <Compile Include="Controllers\JokeCategoryManagementController.cs" />
     <Compile Include="Controllers\JokeManagementController.cs" />
-    <Compile Include="Controllers\JokesController.cs" />
-    <Compile Include="Controllers\LanguageController.cs" />
+    <Compile Include="Controllers\JokeController.cs" />
+    <Compile Include="Controllers\LanguageManagementController.cs" />
     <Compile Include="Controllers\RefreshTokensController.cs" />
     <Compile Include="Controllers\TranslateController.cs" />
-    <Compile Include="Controllers\VersionsController.cs" />
+    <Compile Include="Controllers\VersionController.cs" />
     <Compile Include="ExtensionMethods\ResponseExtensionMethods.cs" />
     <Compile Include="Function\Helper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
