--- a/WebBellwether.Repositories/WebBellwether.Repositories.csproj
+++ b/WebBellwether.Repositories/WebBellwether.Repositories.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Entities\Joke\JokeDetailDao.cs" />
     <Compile Include="Entities\Auth\RefreshTokenDao.cs" />
     <Compile Include="Entities\Translations\LanguageDao.cs" />
+    <Compile Include="Entities\Version\GameFeatureVersionDao.cs" />
     <Compile Include="Entities\Version\IntegrationGameVersionDao.cs" />
     <Compile Include="Entities\Version\JokeCategoryVersionDao.cs" />
     <Compile Include="Entities\Version\JokeVersionDao.cs" />
@@ -81,6 +82,14 @@
     <Compile Include="Migrations\201601051939294_init.cs" />
     <Compile Include="Migrations\201601051939294_init.Designer.cs">
       <DependentUpon>201601051939294_init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201601142228521_gameFeatureVersion.cs" />
+    <Compile Include="Migrations\201601142228521_gameFeatureVersion.Designer.cs">
+      <DependentUpon>201601142228521_gameFeatureVersion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201601142249133_gfv2.cs" />
+    <Compile Include="Migrations\201601142249133_gfv2.Designer.cs">
+      <DependentUpon>201601142249133_gfv2.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -92,6 +101,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201601051939294_init.resx">
       <DependentUpon>201601051939294_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201601142228521_gameFeatureVersion.resx">
+      <DependentUpon>201601142228521_gameFeatureVersion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201601142249133_gfv2.resx">
+      <DependentUpon>201601142249133_gfv2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
