--- a/WebBellwether.API/WebBellwether.API.csproj
+++ b/WebBellwether.API/WebBellwether.API.csproj
@@ -86,6 +86,10 @@
       <HintPath>..\packages\Newtonsoft.Json.8.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Owin">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
@@ -173,6 +177,9 @@
     <Compile Include="Controllers\RefreshTokensController.cs" />
     <Compile Include="Controllers\TranslateController.cs" />
     <Compile Include="Controllers\VersionController.cs" />
+    <Compile Include="DependencyInjection\NinjectConfig.cs" />
+    <Compile Include="DependencyInjection\NinjectDependencyScope.cs" />
+    <Compile Include="DependencyInjection\NinjectResolver.cs" />
     <Compile Include="ExtensionMethods\ResponseExtensionMethods.cs" />
     <Compile Include="Function\Helper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -182,7 +189,6 @@
     <Compile Include="Providers\SimpleRefreshTokenProvider.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Utility\ServiceExecutor.cs" />
-    <Compile Include="Utility\ServiceFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
